added dev dependencies

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/muggy8/stateless/issues"
   },
-  "homepage": "https://github.com/muggy8/stateless#readme"
+  "homepage": "https://github.com/muggy8/stateless#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  }
 }
