--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "url": "https://github.com/muggy8/stateless/issues"
   },
   "homepage": "https://github.com/muggy8/stateless#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp-uglify": "^3.0.0",
+    "install": "^0.10.1",
+    "npm": "^5.0.3"
+  }
 }
